# fcnd

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: fcnd_quickstart.ipynb
src/fcnd/: __init__.py  conformal.py  learners.py  metrics.py  multiple_testing.py  results.py  synthetic.py
src/fcnd/calibration/: __init__.py  cc_grid.py  ebhcc.py
src/fcnd/detectors/: __init__.py  base.py  fcnd.py  msfcnd.py  scnd.py
src/fcnd/model_selection/: __init__.py  subroutines.py
src/fcnd/utils/: __init__.py  cc_utils.py
tests/: test_api.py  test_conformal.py  test_multiple_testing.py
