[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "fcnd"
version = "0.1.1"
description = "Full conformal novelty detection with conformal e-values and e-BH."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
authors = [
  { name = "Junu Lee" },
]
maintainers = [
  { name = "Junu Lee", email = "junulee@wharton.upenn.edu" },
]
keywords = ["novelty detection", "conformal inference", "e-values", "false discovery rate"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
  "scikit-learn>=1.2",
  "numba>=0.57",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "nbformat>=5"]
notebook = ["jupyter>=1", "matplotlib>=3.7"]

[tool.hatch.build.targets.wheel]
packages = ["src/fcnd"]

[tool.hatch.build.targets.sdist]
only-include = [
  "src",
  "tests",
  "examples",
  "CITATION.cff",
  "LICENSE",
  "README.md",
  "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
